src/deploy/kubernetes/infra/dashboard/linkerd/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: linkerd
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Origin "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
spec:
  tls:
    - hosts:
        - goafabric.org
      secretName: server-certificate-secret
  rules:
    - host: goafabric.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkerd-web
                port:
                  number: 8084
